--- a/app/src/main/res/layout/item_home_handicap.xml
+++ b/app/src/main/res/layout/item_home_handicap.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ctl_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/ctl_root"
-    android:paddingBottom="@dimen/margin_10"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:paddingBottom="@dimen/margin_10">
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.43"/>
+        app:layout_constraintGuide_percent="0.43" />
+
     <RelativeLayout
         android:id="@+id/rlv_home_team"
-        android:paddingTop="@dimen/margin_12"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/guideline"
-        android:orientation="horizontal"
         android:layout_width="0dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/margin_12"
+        app:layout_constraintEnd_toEndOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
             android:id="@+id/iv_home_icon"
-            android:layout_marginStart="@dimen/margin_11"
             android:layout_width="@dimen/margin_20"
             android:layout_height="@dimen/margin_20"
-            tools:src="@drawable/icon_team_sign"/>
+            android:layout_marginStart="@dimen/margin_11"
+            tools:src="@drawable/icon_team_sign" />
 
         <TextView
             android:id="@+id/tv_home_name"
@@ -52,112 +55,125 @@
             android:textSize="@dimen/textSize16sp"
             tools:text="0" />
     </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/rlv_away_team"
-        android:paddingTop="@dimen/margin_12"
-       app:layout_constraintTop_toBottomOf="@+id/rlv_home_team"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/guideline"
-        android:orientation="horizontal"
         android:layout_width="0dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/margin_12"
+        app:layout_constraintEnd_toEndOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rlv_home_team">
+
         <ImageView
             android:id="@+id/iv_away_icon"
-            android:layout_marginStart="@dimen/margin_11"
             android:layout_width="@dimen/margin_20"
             android:layout_height="@dimen/margin_20"
-            tools:src="@drawable/icon_team_sign"/>
+            android:layout_marginStart="@dimen/margin_11"
+            tools:src="@drawable/icon_team_sign" />
+
         <TextView
             android:id="@+id/tv_away_name"
-            android:maxLines="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_8"
+            android:layout_toRightOf="@+id/iv_away_icon"
             android:ellipsize="end"
             android:maxWidth="74dp"
-            android:layout_toRightOf="@+id/iv_away_icon"
-            android:layout_marginStart="@dimen/margin_8"
-            android:textStyle="bold"
+            android:maxLines="1"
             android:textColor="@color/color_FFFFFF_535D76"
             android:textSize="@dimen/textSize14sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="波特兰发"/>
+            android:textStyle="bold"
+            tools:text="波特兰发" />
+
         <TextView
             android:id="@+id/tvAwayScore"
-            android:layout_marginEnd="@dimen/margin_20"
-            android:textSize="@dimen/textSize16sp"
-            android:textColor="@color/color_FFFFFF_535D76"
-            android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="0"/>
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="@dimen/margin_20"
+            android:textColor="@color/color_FFFFFF_535D76"
+            android:textSize="@dimen/textSize16sp"
+            tools:text="0" />
     </RelativeLayout>
+
     <LinearLayout
         android:id="@+id/ll_group"
-        android:orientation="horizontal"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="@dimen/margin_10"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/rlv_away_team"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/rlv_away_team"
-        android:layout_width="0dp"
-        android:layout_height="0dp">
+        app:layout_constraintTop_toTopOf="parent">
+
         <org.cxct.sportlottery.ui.game.widget.OddsButtonHome
             android:id="@+id/oddBtn1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/margin_8"
-            app:ob_orientation="1"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            app:ob_orientation="1" />
+
         <org.cxct.sportlottery.ui.game.widget.OddsButtonHome
             android:id="@+id/oddBtn2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/margin_8"
             android:layout_weight="1"
-            app:ob_orientation="1"/>
+            app:ob_orientation="1" />
+
         <org.cxct.sportlottery.ui.game.widget.OddsButtonHome
-            android:visibility="gone"
             android:id="@+id/oddBtn3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/margin_8"
             android:layout_weight="1"
-            app:ob_orientation="1"/>
+            android:visibility="gone"
+            app:ob_orientation="1" />
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/ll_time"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/margin_25"
+        android:layout_marginHorizontal="@dimen/margin_10"
         android:layout_marginTop="@dimen/margin_8"
         android:background="@drawable/bg_timer"
-        android:layout_marginHorizontal="@dimen/margin_10"
-        app:layout_constraintTop_toBottomOf="@+id/ll_group"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/margin_25">
+        app:layout_constraintTop_toBottomOf="@+id/ll_group">
+
         <TextView
             android:id="@+id/tvGameStatus"
-            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:paddingStart="@dimen/margin_10"
             android:textSize="@dimen/textSize12sp"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            tools:text="上半场"/>
+            android:visibility="gone"
+            tools:text="上半场" />
+
         <TextView
             android:id="@+id/tv_game_play_time"
-            android:gravity="center"
-            android:textSize="@dimen/textSize12sp"
-            android:paddingStart="@dimen/margin_10"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            tools:text="80：02"/>
+            android:gravity="center"
+            android:paddingStart="@dimen/margin_10"
+            android:textColor="@color/okb1_app_text_color_gray01"
+            android:textSize="@dimen/textSize12sp"
+            tools:text="80：02" />
+
         <TextView
             android:id="@+id/tvPlayCateCount"
-            android:layout_marginEnd="@dimen/margin_10"
-            android:gravity="end"
-            android:textSize="@dimen/textSize12sp"
-            android:textColor="@color/color_1D9F51"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="20>"/>
+            android:layout_marginEnd="@dimen/margin_10"
+            android:gravity="end"
+            android:textColor="@color/color_1D9F51"
+            android:textSize="@dimen/textSize12sp"
+            tools:text="20>" />
 
     </LinearLayout>
 
