--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -536,4 +536,5 @@
     <color name="color_191D2F_F3F9FF">@color/color_F3F9FF</color>
     <color name="color_181922_F0F5FA">@color/color_F0F5FA</color>
     <color name="color_79839F_6C7BA8">@color/color_6C7BA8</color>
+    <color name="okb1_app_text_color_gray01">#6C7BA8</color>
 </resources>
