--- a/app/src/main/res/drawable/bg_radius_4_button_white_silver_light.xml
+++ b/app/src/main/res/drawable/bg_radius_4_button_white_silver_light.xml
@@ -4,6 +4,6 @@
     <corners android:radius="4dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/color_DFE8F2" />
+        android:color="@color/color_DFEBFF" />
     <solid android:color="@color/color_05025BE8" />
 </shape>
