--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -109,7 +109,6 @@
                         android:textSize="@dimen/textSize14sp" />
 
                 </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
-
                 <LinearLayout
                     android:id="@+id/block_valid_code"
                     android:layout_width="match_parent"
@@ -172,7 +171,7 @@
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_marginStart="10dp"
-                            android:src="@drawable/ic_return" />
+                            android:src="@drawable/icon_money_refresh02" />
 
                     </LinearLayout>
                 </LinearLayout>
@@ -378,7 +377,7 @@
                     tools:ignore="UnusedAttribute" />
                  <TextView
                      android:id="@+id/tv_tips_success"
-                     android:text="@string/tips_password_success"
+                     android:text="@string/tips_login_password_success"
                      android:layout_marginTop="@dimen/margin_14"
                      android:textSize="@dimen/textSize14sp"
                      android:gravity="center"
@@ -393,6 +392,30 @@
                      android:layout_width="match_parent"
                      android:layout_height="50dp"/>
              </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_live_chat"
+                android:layout_marginBottom="@dimen/margin_14"
+                app:layout_constraintBottom_toTopOf="@+id/btn_put"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_marginEnd="@dimen/dp_4"
+                    android:src="@drawable/icon_customer_service"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/tv_live_chat"
+                    android:layout_width="@dimen/margin_16"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/tv_live_chat"
+                    android:textColor="@color/color_025BE8"
+                    android:text="@string/live_chat"
+                    android:layout_marginEnd="@dimen/margin_20"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <Button
                 android:id="@+id/btn_put"
                 style="?android:attr/borderlessButtonStyle"
@@ -413,31 +436,6 @@
     </ScrollView>
 
 
-    <LinearLayout
-        app:layout_constraintTop_toBottomOf="@+id/sv_content_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/margin_20"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/customer_service"
-            android:textColor="@color/color_A5A9B3"
-            android:textSize="@dimen/textSize14sp" />
-
-        <TextView
-            android:id="@+id/tv_customer_service"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_service"
-            android:textColor="@color/color_025BE8"
-            android:textSize="@dimen/textSize14sp" />
-
-    </LinearLayout>
     <include
         android:id="@+id/bottom_liences"
         layout="@layout/bottom_register_layout"
