--- a/app/src/main/res/layout/item_outright_catagory.xml
+++ b/app/src/main/res/layout/item_outright_catagory.xml
@@ -8,10 +8,12 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/lin_categroy_name"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center_vertical"
         android:elevation="1dp"
+        android:layout_marginBottom="1dp"
         android:background="@drawable/bg_catagory_radius_10"
         android:showDividers="end"
         android:paddingHorizontal="@dimen/margin_15">
@@ -55,6 +57,7 @@
         android:padding="10dp"
         tools:listitem="@layout/item_outright_odd"
         tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:itemCount="4" />
+        tools:itemCount="4"
+        android:visibility="visible" />
 
 </LinearLayout>
