--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,11 +67,9 @@
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_10"
-        android:layout_marginTop="@dimen/margin_10"
-        android:layout_marginRight="@dimen/margin_10"
-        android:background="@drawable/okbet_bg_login_card"
-        android:elevation="2dp"
+        android:paddingBottom="30dp"
+        android:layout_marginHorizontal="5dp"
+        android:background="@drawable/bg_login_card_backgroud"
         android:overScrollMode="never"
         android:scrollbars="none"
         app:layout_constraintTop_toBottomOf="@id/label_register">
@@ -80,7 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingVertical="15dp"
-            android:paddingHorizontal="24dp">
+            android:paddingHorizontal="34dp">
 
             <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
                 android:id="@+id/et_account"
