--- a/app/src/main/res/layout/fragment_home_live.xml
+++ b/app/src/main/res/layout/fragment_home_live.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/background"
     android:orientation="vertical">
 
@@ -12,49 +12,50 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tab_home"
-        android:layout_below="@+id/lin_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="@dimen/margin_10"
+        android:layout_below="@+id/lin_toolbar"
         android:clipToPadding="false"
         android:orientation="horizontal"
-        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:paddingHorizontal="@dimen/margin_10"
         tools:itemCount="6"
+        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_tab_home" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_live"
-        android:layout_below="@+id/rv_tab_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="@dimen/margin_15"
-        tools:listitem="@layout/item_home_live"
-        tools:itemCount="3" />
+        android:layout_below="@+id/rv_tab_home"
+        tools:itemCount="3"
+        tools:listitem="@layout/item_home_live" />
+
     <LinearLayout
         android:id="@+id/ll_come_back"
-        android:visibility="gone"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
-        android:layout_alignParentEnd="true"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:background="@drawable/btn_comeback"
-        android:paddingStart="8dp"
-        android:paddingEnd="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/btn_comeback"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingStart="8dp"
+        android:paddingEnd="10dp"
+        android:visibility="gone"
         tools:visibility="visible">
+
         <ImageView
-            android:src="@drawable/icon_top_arrow_up"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/tv_come_back"
-            android:text="@string/go_back_top"
-            android:drawablePadding="-6dp"
-            android:textColor="@color/color_181922_FFFFFF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            />
+            android:src="@drawable/icon_top_arrow_up" />
+
+        <TextView
+            android:id="@+id/tv_come_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="-6dp"
+            android:text="@string/go_back_top"
+            android:textColor="@color/color_181922_FFFFFF" />
     </LinearLayout>
 </RelativeLayout>
