--- a/app/src/main/res/layout/item_home_live.xml
+++ b/app/src/main/res/layout/item_home_live.xml
@@ -6,8 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp"
+    android:layout_marginHorizontal="15dp"
+    android:layout_marginTop="1dp"
     android:padding="0.5dp"
-    android:background="@drawable/bg_white_stroke_blue_radius_10"
+    app:cardElevation="4dp"
     app:cardCornerRadius="@dimen/margin_10">
 
     <LinearLayout
