--- a/app/src/main/res/layout/item_home_slot.xml
+++ b/app/src/main/res/layout/item_home_slot.xml
@@ -1,93 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="@dimen/margin_15"
-    android:layout_marginVertical="@dimen/margin_6"
-    app:cardElevation="2dp"
-    app:cardCornerRadius="10dp">
-
-    <ImageView
-        android:id="@+id/iv_bg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:src="@drawable/bg_card_game" />
-
+    android:layout_height="190dp"
+    android:paddingHorizontal="10dp"
+    android:paddingBottom="10dp"
+    android:background="@drawable/bg_card_game">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:elevation="@dimen/margin_4"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:paddingLeft="30dp">
 
-        <LinearLayout
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/tv_firm_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:orientation="vertical"
-            android:gravity="center_vertical"
-            android:elevation="@dimen/margin_4"
-            android:paddingLeft="30dp">
+            android:textColor="@color/color_025BE8"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:text="OKGAMES" />
 
-            <TextView
-                android:id="@+id/tv_firm_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/color_025BE8"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                tools:text="OKGAMES" />
-
-            <TextView
-                android:id="@+id/tv_game_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="13dp"
-                android:layout_marginBottom="15dp"
-                android:textColor="@color/color_6C7BA8"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:text="E-GAME"
-                android:visibility="visible" />
-
-            <ImageView
-                android:id="@+id/iv_repair"
-                android:layout_width="28dp"
-                android:layout_height="28dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="13dp"
-                android:visibility="gone"
-                android:src="@drawable/ic_game_repair" />
-
-            <View
-                android:layout_width="@dimen/margin_30"
-                android:layout_height="2dp"
-                android:background="@color/color_6C7BA8" />
-
-            <TextView
-                android:id="@+id/tv_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_5"
-                android:textColor="@color/color_6C7BA8"
-                android:fontFamily="@font/din_regular"
-                android:textSize="14sp"
-                android:text="@string/comingsoon" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_game_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:layout_marginBottom="15dp"
+            android:text="E-GAME"
+            android:textColor="@color/color_6C7BA8"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
 
         <ImageView
-            android:id="@+id/iv_people"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:elevation="@dimen/margin_3"
-            android:adjustViewBounds="true"
-            android:src="@drawable/ic_game_01" />
+            android:id="@+id/iv_repair"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="13dp"
+            android:src="@drawable/ic_game_repair"
+            android:visibility="gone" />
+
+        <View
+            android:layout_width="@dimen/margin_30"
+            android:layout_height="2dp"
+            android:background="@color/color_6C7BA8" />
+
+        <TextView
+            android:id="@+id/tv_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_5"
+            android:fontFamily="@font/din_regular"
+            android:text="@string/comingsoon"
+            android:textColor="@color/color_6C7BA8"
+            android:textSize="14sp" />
+
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+    <ImageView
+        android:id="@+id/iv_people"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:adjustViewBounds="true"
+        android:elevation="@dimen/margin_3"
+        android:src="@drawable/ic_game_01" />
+</LinearLayout>
+
