--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -109,7 +109,7 @@
                         android:textSize="@dimen/textSize14sp" />
 
                 </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
-                <LinearLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/block_valid_code"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -120,15 +120,17 @@
 
                     <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
                         android:id="@+id/et_verification_code"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginTop="4dp"
                         app:hintText="@string/hint_verification_code"
                         app:iconSignifier="@drawable/ic_valid"
                         app:isResponsiveIconColor="false"
                         app:labelText="@string/verification_code"
                         app:labelTextStyle="normal"
+                        app:layout_constraintRight_toLeftOf="@+id/llCheck"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:primaryColor="@color/color_AFAFB1">
 
                         <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
@@ -154,13 +156,16 @@
                         android:layout_marginStart="10dp"
                         android:background="@color/transparent"
                         android:gravity="center"
+                        android:layout_marginBottom="@dimen/margin_8"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="@+id/block_valid_code"
                         android:minWidth="80dp"
                         android:orientation="horizontal">
 
                         <com.makeramen.roundedimageview.RoundedImageView
                             android:id="@+id/ivVerification"
-                            android:layout_width="109dp"
-                            android:layout_height="40dp"
+                            android:layout_width="90dp"
+                            android:layout_height="30dp"
                             android:minHeight="32dp"
                             android:scaleType="fitXY"
                             android:text="@string/get_verification_code"
@@ -174,13 +179,13 @@
                             android:src="@drawable/icon_money_refresh02" />
 
                     </LinearLayout>
-                </LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
 
                 android:id="@+id/first_pager"
-                android:visibility="gone"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/cl_account"
