--- a/app/src/main/res/layout/transfer_pay_fragment.xml
+++ b/app/src/main/res/layout/transfer_pay_fragment.xml
@@ -311,13 +311,14 @@
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
+            android:layout_marginStart="@dimen/margin_14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_marginStart="@dimen/margin_14"
+                android:id="@+id/tv_dio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/dot"
@@ -326,6 +327,7 @@
 
             <TextView
                 android:id="@+id/tv_hint1"
+                android:layout_marginEnd="@dimen/margin_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/money_recharge_hint1"
@@ -350,6 +352,7 @@
 
             <TextView
                 android:id="@+id/tv_hint2"
+                android:layout_marginEnd="@dimen/margin_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/money_recharge_hint2"
