--- a/app/src/main/res/drawable/bg_bet_slip_shape_top_8dp_blue_stroke_no_bottom_stroke.xml
+++ b/app/src/main/res/drawable/bg_bet_slip_shape_top_8dp_blue_stroke_no_bottom_stroke.xml
@@ -11,7 +11,7 @@
         <solid android:color="@color/color_2B3859_F3F9FF" />
         <stroke
             android:width="1dp"
-            android:color="@color/color_2B3859_E3E8EE" />
+            android:color="@color/color_C0CCEC" />
     </shape>
 </item>
 </layer-list>
