--- a/app/src/main/res/drawable/bg_square_shape_8dp_blue_stroke_white_solid.xml
+++ b/app/src/main/res/drawable/bg_square_shape_8dp_blue_stroke_white_solid.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <corners android:radius="8dp" />
     <stroke android:width="1dp"
-        android:color="@color/color_80334266_E3E8EE"/>
+        android:color="@color/color_C0CCEC"/>
     <solid
         android:color="@color/color_202541_FFFFFF" />
 </shape>
