--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -16,12 +16,12 @@
 
         <View
             android:id="@+id/bg_dim_mount"
-            android:alpha="0"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:alpha="0"
+            android:background="@color/transparent_black_50"
             android:clickable="true"
-            android:focusable="true"
-            android:background="@color/transparent_black_50"/>
+            android:focusable="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -75,35 +75,35 @@
                             android:layout_height="wrap_content"
                             android:background="@color/color_202541_FFFFFF">
 
-                        <com.google.android.material.tabs.TabLayout
-                            android:id="@+id/betTypeTabLayout"
-                            android:layout_width="match_parent"
-                            android:layout_height="50dp"
-                            android:layout_marginHorizontal="65dp"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:tabIndicator="@drawable/custom_bet_list_tab_indicator"
-                            app:tabIndicatorFullWidth="true"
-                            app:tabMode="fixed"
-                            app:tabPaddingEnd="0dp"
-                            app:tabPaddingStart="0dp"
-                            app:tabRippleColor="@null"
-                            app:tabSelectedTextColor="@color/color_FFFFFF_414655"
-                            app:tabTextAppearance="@style/NoUppercaseTab"
-                            app:tabTextColor="@color/color_A7B2C4">
+                            <com.google.android.material.tabs.TabLayout
+                                android:id="@+id/betTypeTabLayout"
+                                android:layout_width="match_parent"
+                                android:layout_height="50dp"
+                                android:layout_marginHorizontal="65dp"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:tabIndicator="@drawable/custom_bet_list_tab_indicator"
+                                app:tabIndicatorFullWidth="true"
+                                app:tabMode="fixed"
+                                app:tabPaddingEnd="0dp"
+                                app:tabPaddingStart="0dp"
+                                app:tabRippleColor="@null"
+                                app:tabSelectedTextColor="@color/color_FFFFFF_414655"
+                                app:tabTextAppearance="@style/NoUppercaseTab"
+                                app:tabTextColor="@color/color_A7B2C4">
 
-                            <com.google.android.material.tabs.TabItem
-                                android:id="@+id/first_tab"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout="@layout/item_bet_list_tab" />
+                                <com.google.android.material.tabs.TabItem
+                                    android:id="@+id/first_tab"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout="@layout/item_bet_list_tab" />
 
-                            <com.google.android.material.tabs.TabItem
-                                android:id="@+id/second_tab"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout="@layout/item_bet_list_tab" />
+                                <com.google.android.material.tabs.TabItem
+                                    android:id="@+id/second_tab"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout="@layout/item_bet_list_tab" />
 
-                        </com.google.android.material.tabs.TabLayout>
+                            </com.google.android.material.tabs.TabLayout>
 
                         </FrameLayout>
 
@@ -181,11 +181,15 @@
                             tools:listitem="@layout/item_bet_list_batch_control_v3" />
                     </FrameLayout>
 
+                    <include
+                        android:id="@+id/includeOddsLayout"
+                        layout="@layout/include_bet_odds_tips" />
+
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/cl_total_info"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingHorizontal="24dp"
+                        android:paddingHorizontal="15dp"
                         android:paddingVertical="2dp">
 
                         <androidx.constraintlayout.widget.Guideline
@@ -199,10 +203,11 @@
                             android:id="@+id/ll_total_stake"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="@+id/total_info_guide_line"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="@+id/total_info_guide_line">
+                            app:layout_constraintTop_toTopOf="parent">
+
                             <TextView
                                 android:id="@+id/title_all_bet"
                                 android:layout_width="wrap_content"
@@ -234,10 +239,11 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:gravity="end"
-                            app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="@+id/total_info_guide_line">
+                            app:layout_constraintStart_toStartOf="@+id/total_info_guide_line"
+                            app:layout_constraintTop_toTopOf="parent">
+
                             <TextView
                                 android:id="@+id/title_winnable_amount"
                                 android:layout_width="wrap_content"
@@ -290,9 +296,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_gradient_bet_total"
-                    android:padding="14dp"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:padding="14dp">
 
                     <TextView
                         android:id="@+id/btn_delete_all"
@@ -325,11 +331,11 @@
                         android:layout_height="0dp"
                         android:background="@drawable/button_radius_8_bet_button"
                         android:visibility="gone"
-                        tools:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="@+id/btn_bet"
                         app:layout_constraintEnd_toEndOf="@+id/btn_bet"
                         app:layout_constraintStart_toStartOf="@+id/btn_bet"
-                        app:layout_constraintTop_toTopOf="@+id/btn_bet">
+                        app:layout_constraintTop_toTopOf="@+id/btn_bet"
+                        tools:visibility="gone">
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -360,6 +366,7 @@
                     <!--endregion bet loading view-->
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                 <!-- 選項關閉提示 -->
                 <!--<LinearLayout
@@ -412,10 +419,10 @@
             android:id="@+id/blockTouchView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/transparent_black_1"
             android:clickable="true"
             android:focusable="true"
-            android:visibility="gone"
-            android:background="@color/transparent_black_1"/>
+            android:visibility="gone" />
 
     </FrameLayout>
 
