设置串关玩法页面布局展开收起

--- a/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
@@ -202,7 +202,7 @@
                     android:paddingTop="@dimen/margin_15"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    tools:visibility="visible" />
+                    tools:visibility="gone" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
