--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -138,28 +138,47 @@
                     android:background="@drawable/bg_gradient_bet_total"
                     android:orientation="vertical">
 
-                    <FrameLayout
+                    <!--串关投注-->
+                    <androidx.appcompat.widget.LinearLayoutCompat
                         android:id="@+id/cl_parlay_list"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:clipChildren="false"
-                        android:clipToPadding="false"
+                        android:minHeight="50dp"
+                        android:orientation="vertical"
                         android:visibility="gone"
                         tools:visibility="visible">
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rv_parlay_list"
                             android:layout_width="match_parent"
-                            android:layout_height="246dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginTop="12.5dp"
-                            android:layout_marginBottom="8.5dp"
                             android:overScrollMode="never"
                             app:layout_constraintTop_toTopOf="parent"
-                            tools:itemCount="2"
+                            tools:itemCount="1"
                             tools:listitem="@layout/item_bet_list_batch_control_connect_v3" />
 
-                    </FrameLayout>
+                        <TextView
+                            android:id="@+id/tvExpandOrStacked"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:drawableEnd="@drawable/ic_arrow_down_blue"
+                            android:drawablePadding="4dp"
+                            android:gravity="center"
+                            android:paddingHorizontal="20dp"
+                            android:paddingVertical="10dp"
+                            android:text="@string/expand_more_combinations"
+                            android:textColor="@color/color_025BE8"
+                            android:textSize="11sp" />
 
+
+                        <include
+                            android:id="@+id/includeOddsLayout"
+                            layout="@layout/include_bet_odds_tips" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+
+                    <!--单项投注-->
                     <FrameLayout
                         android:id="@+id/cl_single_list"
                         android:layout_width="match_parent"
@@ -167,7 +186,7 @@
                         android:clipChildren="false"
                         android:clipToPadding="false"
                         android:visibility="gone"
-                        tools:visibility="visible">
+                        tools:visibility="gone">
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rv_single_list"
@@ -180,7 +199,6 @@
                             tools:itemCount="1"
                             tools:listitem="@layout/item_bet_list_batch_control_v3" />
                     </FrameLayout>
-
 
 
                     <androidx.constraintlayout.widget.ConstraintLayout
