--- a/app/src/main/res/layout/hot_handicap_include.xml
+++ b/app/src/main/res/layout/hot_handicap_include.xml
@@ -1,78 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/margin_20"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_marginTop="@dimen/margin_20">
+
     <ImageView
         android:id="@+id/iv_logo_handicap"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/icon_handicap"
-        android:layout_marginStart="@dimen/margin_13"
         android:layout_width="@dimen/margin_24"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_13"
+        android:src="@drawable/icon_handicap"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tv_hot_handicap"
-        android:textStyle="bold"
-        android:text="@string/hot_handicap"
-        android:layout_marginStart="@dimen/margin_6"
-        android:textColor="@color/color_D2E4FF_414655"
-        app:layout_constraintTop_toTopOf="@+id/iv_logo_handicap"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_logo_handicap"
-        android:textSize="@dimen/textSize14sp"
-        app:layout_constraintStart_toEndOf="@+id/iv_logo_handicap"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_6"
+        android:text="@string/hot_handicap"
+        android:textColor="@color/color_D2E4FF_414655"
+        android:textSize="@dimen/textSize14sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_logo_handicap"
+        app:layout_constraintStart_toEndOf="@+id/iv_logo_handicap"
+        app:layout_constraintTop_toTopOf="@+id/iv_logo_handicap" />
+
     <LinearLayout
         android:id="@+id/ll_hot_arrow"
-        android:background="@drawable/shape_hot_handicap_bg"
-        app:layout_constraintStart_toEndOf="@+id/tv_hot_handicap"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="@dimen/margin_10"
-        android:orientation="horizontal"
-        android:gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_10"
+        android:background="@drawable/shape_hot_handicap_bg"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toEndOf="@+id/tv_hot_handicap"
+        app:layout_constraintTop_toTopOf="parent">
+
         <org.cxct.sportlottery.ui.component.StatusSpinnerNewView
             android:id="@+id/selector_order_status"
             android:layout_width="match_parent"
             android:layout_height="24dp"
+            app:arrowSrc="@drawable/icon_arrow_blue"
             app:defaultStatusText="@string/ou_hdp_1x2_title"
-            app:textColor="@color/color_025BE8_025BE8"
-            app:arrowSrc = "@drawable/icon_arrow_blue"
-            app:listBackground="@drawable/bg_play_category_pop" />
+            app:listBackground="@drawable/bg_play_category_pop"
+            app:textColor="@color/color_025BE8_025BE8" />
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/ll_hot_handicap_more"
-        app:layout_constraintTop_toTopOf="@+id/iv_logo_handicap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/iv_logo_handicap"
         app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        app:layout_constraintTop_toTopOf="@+id/iv_logo_handicap">
+
         <TextView
-            android:textColor="@color/color_025BE8"
-            android:textSize="@dimen/textSize12sp"
-            android:text="@string/see_more"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="@string/see_more"
+            android:textColor="@color/color_025BE8"
+            android:textSize="@dimen/textSize12sp" />
+
         <ImageView
-            android:layout_marginEnd="@dimen/margin_14"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/icon_arrow03_blue"
             android:layout_width="@dimen/margin_14"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/margin_14"
+            android:src="@drawable/icon_arrow03_blue" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_hot_handicap"
-        app:layout_constraintTop_toBottomOf="@+id/ll_hot_arrow"
-        android:paddingBottom="@dimen/margin_30"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/margin_30"
+        app:layout_constraintTop_toBottomOf="@+id/ll_hot_arrow"
         tools:itemCount="2"
-        tools:listitem="@layout/item_hot_handicap"/>
+        tools:listitem="@layout/item_hot_handicap" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
