--- a/app/src/main/res/layout/item_home_handicap.xml
+++ b/app/src/main/res/layout/item_home_handicap.xml
@@ -33,10 +33,10 @@
 
         <TextView
             android:id="@+id/tv_home_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_8"
-            android:layout_toRightOf="@+id/iv_home_icon"
+            android:layout_marginLeft="39dp"
+            android:layout_toLeftOf="@+id/tvHomeScore"
             android:ellipsize="end"
             android:maxWidth="75dp"
             android:maxLines="1"
@@ -75,12 +75,11 @@
 
         <TextView
             android:id="@+id/tv_away_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_8"
-            android:layout_toRightOf="@+id/iv_away_icon"
+            android:layout_marginLeft="39dp"
+            android:layout_toLeftOf="@+id/tvAwayScore"
             android:ellipsize="end"
-            android:maxWidth="74dp"
             android:maxLines="1"
             android:textColor="@color/color_FFFFFF_535D76"
             android:textSize="@dimen/textSize14sp"
