1.隐藏顶部单关、串关切换面板 2.去掉底部删除按钮 3.增加底部串关、单管切换按钮

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -86,6 +86,8 @@
     <color name="color_30E23434">#4BE23434</color>
     <color name="color_CC0054">#CC0054</color>
     <color name="color_724653">#724653</color>
+    <color name="color_EFFFF5">#EFFFF5</color>
+    <color name="color_25BF63">#25BF63</color>
 
     <color name="color_F5F5F5">#F5F5F5</color>
     <color name="color_7F7F7F">#7F7F7F</color>
