--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -70,6 +70,7 @@
                         android:orientation="vertical">
 
                         <FrameLayout
+                            android:visibility="gone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/color_202541_FFFFFF">
@@ -316,13 +317,13 @@
                     android:padding="14dp">
 
                     <TextView
-                        android:id="@+id/btn_delete_all"
+                        android:id="@+id/btnParlaySingle"
                         android:layout_width="102dp"
                         android:layout_height="45dp"
-                        android:background="@drawable/bg_radius_8_bet_delete"
+                        android:background="@drawable/bg_radius_8_bet_parlay"
                         android:gravity="center"
-                        android:text="@string/delete_bet"
-                        android:textColor="@color/color_E23434_E23434"
+                        android:text="@string/bet_parlay"
+                        android:textColor="@color/color_25BF63"
                         android:textSize="@dimen/textSize16sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -336,7 +337,7 @@
                         android:layout_weight="1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/btn_delete_all"
+                        app:layout_constraintStart_toEndOf="@+id/btnParlaySingle"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <!--region bet loading view-->
