--- a/app/src/main/res/layout/include_bet_odds_tips.xml
+++ b/app/src/main/res/layout/include_bet_odds_tips.xml
@@ -47,6 +47,7 @@
             app:layout_constraintTop_toTopOf="@+id/tvAcceptOddsChange" />
 
         <ImageView
+            android:id="@+id/ivClearCarts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="14dp"
