修改密码BUG处理 OKBETOK-3665 OKBETOK-3664

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -158,7 +158,8 @@
                         android:gravity="center"
                         android:layout_marginBottom="@dimen/margin_8"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toBottomOf="@+id/block_valid_code"
+                        app:layout_constraintBottom_toBottomOf="@+id/et_verification_code"
+                        app:layout_constraintTop_toTopOf="@+id/et_verification_code"
                         android:minWidth="80dp"
                         android:orientation="horizontal">
 
