忘记密码bug处理

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -43,7 +43,7 @@
         android:layout_width="151dp"
         android:layout_height="60dp"
         android:layout_marginTop="100dp"
-        android:src="@drawable/okbet_login_logo"
+        android:src="@drawable/logo_okbet_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -128,6 +128,7 @@
                         app:isResponsiveIconColor="false"
                         app:labelText="@string/verification_code"
                         app:labelTextStyle="normal"
+                        android:maxWidth="120dp"
                         app:layout_constraintRight_toLeftOf="@+id/llCheck"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -139,6 +140,7 @@
                             android:layout_height="wrap_content"
                             android:imeOptions="actionNext"
                             android:inputType="number"
+                            android:maxLength="8"
                             android:textColor="@color/color_FFFFFF_DE000000"
                             android:singleLine="true"
                             android:ellipsize="end"
@@ -257,6 +259,7 @@
                             android:imeOptions="actionNext"
                             android:inputType="number"
                             android:maxLines="1"
+                            android:maxLength="8"
                             android:textColor="@color/color_FFFFFF_DE000000"
                             android:textSize="@dimen/textSize14sp"
                             android:textColorHint="@color/color_C9CFD7" />
