获取验证码按钮文案更新

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -200,7 +200,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    app:hintText="@string/hint_phone_number"
+                    app:hintText="@string/hint_phone_num"
                     app:isResponsiveIconColor="false"
                     app:iconSignifier="@drawable/icon_device_mobile"
                     app:labelText="@string/phone_number"
