支付类型配置处理

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -124,7 +124,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         app:hintText="@string/hint_verification_code"
-                        app:iconSignifier="@drawable/ic_valid"
+                        app:iconSignifier="@drawable/icon_verfication02"
                         app:isResponsiveIconColor="false"
                         app:labelText="@string/verification_code"
                         app:labelTextStyle="normal"
